update user profile feature

--- a/accounts/templates/update_profile.html
+++ b/accounts/templates/update_profile.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block b %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-outline-primary">Submit</button>
+        <button class="btn btn-outline-success" type="submit">Update Profile</button>
     </form>
 {% endblock %}
