--- a/accounts/templates/update_profile.html
+++ b/accounts/templates/update_profile.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block b %}
+    {% if user.user_profile.profile_picture %}
+        <img
+                src="{{user.user_profile.profile_picture.url}}"
+                alt="profile picture of {{ user.username }}"
+                style="height:100px; width:100px"
+        >
+    {% endif %}
+    <hr/>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% bootstrap_form form %}
         <button class="btn btn-outline-success" type="submit">Update Profile</button>
     </form>
 {% endblock %}
