--- a/movies/templates/browse_movies.html
+++ b/movies/templates/browse_movies.html
@@ -5,11 +5,15 @@
             {% for genre in genres %}
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img
+                              src="{{ genre.genre_poster.url }}"
+                              class="card-img-top" alt="Poster for {{ genre.genre_name }}"
+                              style="width:200px; height:300px;"
+                      >
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">{{ genre.genre_name }}</h5>
+{#                        <p class="card-text">{{ genre.about_genre }}</p>#}
+                        <a href="{% url 'movies:browse_by_genre' genre.genre_name %}" class="btn btn-primary">Browse for {{ genre.genre_name }}</a>
                       </div>
                     </div>
                 </div>
