--- a/templates/base.html
+++ b/templates/base.html
@@ -89,8 +89,8 @@
                 </li>
 
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" action="{% url 'movies:search_results' %}" method="get">
+                {{ search_form.query }}
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
 
