--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col">
             <div class="card mb-3" style="width:700px">
-              <img src="https://placehold.co/700x400" style="width:700px;height:400px;" class="card-img-top" alt="...">
+              <img src="https://i.ibb.co/ymRqKvyg/s-Movies-ticket-banner.webp" style="width:700px;height:400px; object-fit:contain"  class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Tickets</h5>
                 <p class="card-text">Buy movie tickets for theatre in or around your town!</p>
